# harmonic_weights_triangle_mesh

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  launch_cmake.bat  proj.pro
samples/: buddha.off  donut.off  plane_iregular_0.off  plane_iregular_1.off  plane_regular.off  plane_regular_res1.off  plane_regular_res2.off  plane_regular_res3.off  plane_wholes.off
src/: main.cpp  mesh.hpp  solve_laplace_equation.cpp  solvers.hpp  vec3.hpp
src/topology/: vertex_to_1st_ring_vertices.cpp  vertex_to_1st_ring_vertices.hpp  vertex_to_face.cpp  vertex_to_face.hpp
